k8s/maintenance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkpouch-maintenance-ingress
  namespace: linkpouch-dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "100"
    traefik.ingress.kubernetes.io/router.middlewares: linkpouch-dev-redirect-https@kubernetescrd,linkpouch-dev-rate-limit@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: linkpou.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintenance
                port:
                  number: 80
  tls:
    - hosts:
        - linkpou.ch
      secretName: linkpouch-tls
